# colmap-expanded

./: .cursorrules  .gitignore  CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  PHOTOGRAMMETRY_TODO.md  README.md  vcpkg.json
cmake/: FindDependencies.cmake
src/colmap/: CMakeLists.txt
src/colmap/controllers/: bundle_adjustment.cc
src/colmap/exe/: CMakeLists.txt
src/colmap/ml/: CMakeLists.txt  disk_detector.cc  disk_detector.h  loftr_matcher.cc  loftr_matcher.h  ml_manager.cc  ml_manager.h  superglue_matcher.cc  superglue_matcher.h  superpoint_detector.cc  superpoint_detector.h  test_ml_manager.cc
src/colmap/ui/: CMakeLists.txt  bundle_adjustment_widget.cc  main_window.cc  main_window.h  ml_model_widget.cc  ml_model_widget.h  resources.qrc  theme_manager.cc  theme_manager.h
src/colmap/ui/stylesheets/: dark.qss  light.qss
